resolve #2875 Preview tab: Empty survey message is not aligned (#2880)

--- a/packages/survey-creator-core/src/variables.scss
+++ b/packages/survey-creator-core/src/variables.scss
@@ -87,3 +87,16 @@ $tab-min-height: var(--tab-min-height, auto);
   -ms-user-select: none;
   user-select: none;
 }
+@mixin centerText {
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: 400;
+  font-size: calcSize(2);
+  color: $foreground;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  overflow: hidden;
+}
